[gd_scene load_steps=2 format=3 uid="uid://dialogue_manager_scene"]

[ext_resource type="Script" path="res://scripts/dialogue_manager.gd" id="1_dialogue"]

[node name="DialogueManager" type="CanvasLayer" groups=["dialogue_manager"]]
script = ExtResource("1_dialogue")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 40

[node name="PortraitRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 15

[node name="SpeakerLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 42
text = "Speaker Name"

[node name="DialogueLabel" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Dialogue text goes here..."

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContinueHint" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "â–¼ Click to continue"
horizontal_alignment = 2
